--- a/starter/03-CSS-Fundamentals/blog.html
+++ b/starter/03-CSS-Fundamentals/blog.html
@@ -4,6 +4,7 @@
     <title>BLOG</title>
   </head>
   <body>
+<!--     Heading using header function -->
     <h2>BLOG</h2>
     <a href="index.html">Back to home</a>
   </body>
